[gd_scene load_steps=13 format=3 uid="uid://dwygpirxl7y8d"]

[ext_resource type="Texture2D" uid="uid://cdsyjsuysj0kd" path="res://art/tilesets/plains.png" id="1_76t38"]
[ext_resource type="Script" path="res://scripts/world.gd" id="1_sgrlv"]
[ext_resource type="Texture2D" uid="uid://dx2nio0spxlbb" path="res://art/tilesets/grass.png" id="2_14ung"]
[ext_resource type="Texture2D" uid="uid://dnpctvbr5lkqy" path="res://art/objects/objects.png" id="3_vhh2v"]
[ext_resource type="PackedScene" uid="uid://dtvn2u0cblqaq" path="res://scenes/player.tscn" id="4_31fbh"]
[ext_resource type="PackedScene" uid="uid://bah40fntc3xda" path="res://scenes/enemy.tscn" id="5_kawjt"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_4wsp5"]
texture = ExtResource("2_14ung")
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_kcfcs"]
texture = ExtResource("1_76t38")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_m6pr1"]
texture = ExtResource("3_vhh2v")
0:0/0 = 0
0:0/0/y_sort_origin = 4
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.89528, 4.86142, -6.99449, 0.496063, 6.89527, 0.39685, 6.89527, 5.15905)
5:0/0 = 0
5:0/0/y_sort_origin = 5
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-6.99449, 6.05197, -7.07151, 1.67043, 6.73742, 1.67043, 6.89527, 5.95275)
0:1/0 = 0
0:1/0/y_sort_origin = 5
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(5.05984, 8, -1.48819, 8, -6.25039, 4.16693, -8, 0.198425, 8, 0.793701, 6.05196, 4.7622)
0:5/size_in_atlas = Vector2i(3, 4)
0:5/0 = 0
0:5/0/y_sort_origin = 20
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(9.82204, 26.3905, 0.496063, 25.0016, -5.25827, 26.1921, -11.211, 23.0173, -11.6079, 16.2709, -9.22677, 13.6913, 8.23465, 13.0961, 10.0205, 15.4772, 12.2031, 20.8346, 9.42519, 21.4299)
6:7/size_in_atlas = Vector2i(2, 2)
6:7/0 = 0
6:7/0/y_sort_origin = 9
6:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-15.9983, 10.253, -14.4073, 1.59099, 15.1144, 1.59099, 15.8215, 8.66206, 10.695, 13.9654, -1.85616, 15.2028, -10.1647, 15.3796)
8:6/size_in_atlas = Vector2i(2, 3)
8:6/0 = 0
8:6/0/y_sort_origin = 17
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(6.0988, 19.9758, 1.14905, 21.39, -4.50781, 21.2132, -7.33623, 15.7331, 0.618717, 15.5563, 8.39689, 15.5563)
10:7/size_in_atlas = Vector2i(2, 2)
10:7/0 = 0
10:7/0/y_sort_origin = 5
10:7/0/physics_layer_0/polygon_0/points = PackedVector2Array(-11.2253, 5.83363, -12.4628, 0.883883, 11.7556, 1.23744, 12.4628, 4.06586, 10.1647, 6.89429, 9.45755, 9.36916, -6.98268, 9.72272)
11:2/size_in_atlas = Vector2i(1, 2)
11:2/0 = 0
10:0/size_in_atlas = Vector2i(2, 1)
10:0/0 = 0

[sub_resource type="TileSet" id="TileSet_h3fwd"]
physics_layer_0/collision_layer = 1
sources/1 = SubResource("TileSetAtlasSource_4wsp5")
sources/2 = SubResource("TileSetAtlasSource_kcfcs")
sources/3 = SubResource("TileSetAtlasSource_m6pr1")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fo2mx"]
size = Vector2(80, 33)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gr3n8"]
size = Vector2(26, 49)

[node name="world" type="Node2D"]
y_sort_enabled = true
script = ExtResource("1_sgrlv")

[node name="TileMap" type="TileMap" parent="."]
y_sort_enabled = true
tile_set = SubResource("TileSet_h3fwd")
format = 2
layer_0/name = "ground"
layer_0/tile_data = PackedInt32Array(0, 196610, 0, 65536, 196610, 1, 131072, 262146, 1, 196608, 327682, 0, 262144, 65538, 2, 327680, 1, 0, 393216, 1, 0, 458752, 1, 0, 524288, 1, 0, 589824, 1, 0, 655360, 1, 0, 720896, 1, 0, 1, 1, 0, 65537, 1, 0, 131073, 131074, 0, 196609, 131074, 1, 262145, 327682, 0, 327681, 65538, 2, 393217, 1, 0, 458753, 1, 0, 524289, 1, 0, 589825, 1, 0, 655361, 1, 0, 720897, 1, 0, 2, 1, 0, 65538, 1, 0, 131074, 131074, 0, 196610, 131074, 1, 262146, 131074, 1, 327682, 327682, 0, 393218, 65538, 1, 458754, 65538, 1, 524290, 65538, 2, 589826, 1, 0, 655362, 1, 0, 720898, 1, 0, 3, 1, 0, 65539, 1, 0, 131075, 196610, 0, 196611, 196610, 1, 262147, 262146, 1, 327683, 131074, 1, 393219, 131074, 1, 458755, 131074, 1, 524291, 327682, 0, 589827, 65538, 2, 655363, 1, 0, 720899, 1, 0, 4, 1, 0, 65540, 1, 0, 131076, 1, 0, 196612, 1, 0, 262148, 196610, 0, 327684, 196610, 1, 393220, 196610, 1, 458756, 262146, 1, 524292, 131074, 1, 589828, 131074, 2, 655364, 1, 0, 720900, 1, 0, 5, 1, 0, 65541, 1, 0, 131077, 1, 0, 196613, 1, 0, 262149, 1, 0, 327685, 1, 0, 393221, 1, 0, 458757, 131074, 0, 524293, 131074, 1, 589829, 131074, 2, 655365, 1, 0, 720901, 1, 0, 6, 1, 0, 65542, 1, 0, 131078, 1, 0, 196614, 1, 0, 262150, 1, 0, 327686, 1, 0, 393222, 1, 0, 458758, 131074, 0, 524294, 131074, 1, 589830, 131074, 2, 655366, 1, 0, 720902, 1, 0, 7, 1, 0, 65543, 1, 0, 131079, 1, 0, 196615, 1, 0, 262151, 1, 0, 327687, 1, 0, 393223, 65538, 0, 458759, 327682, 1, 524295, 131074, 1, 589831, 131074, 2, 655367, 1, 0, 720903, 1, 0, 8, 1, 0, 65544, 1, 0, 131080, 1, 0, 196616, 1, 0, 262152, 1, 0, 327688, 1, 0, 393224, 131074, 0, 458760, 131074, 1, 524296, 262146, 0, 589832, 196610, 2, 655368, 1, 0, 720904, 1, 0, 9, 1, 0, 65545, 1, 0, 131081, 1, 0, 196617, 1, 0, 262153, 1, 0, 327689, 1, 0, 393225, 131074, 0, 458761, 131074, 1, 524297, 131074, 2, 589833, 1, 0, 655369, 1, 0, 720905, 1, 0, 10, 1, 0, 65546, 1, 0, 131082, 1, 0, 196618, 1, 0, 262154, 1, 0, 327690, 65538, 0, 393226, 327682, 1, 458762, 131074, 1, 524298, 131074, 2, 589834, 1, 0, 655370, 1, 0, 720906, 1, 0, 11, 1, 0, 65547, 1, 0, 131083, 1, 0, 196619, 1, 0, 262155, 65538, 0, 327691, 327682, 1, 393227, 131074, 1, 458763, 262146, 0, 524299, 196610, 2, 589835, 1, 0, 655371, 1, 0, 720907, 1, 0, 12, 1, 0, 65548, 1, 0, 131084, 1, 0, 196620, 1, 0, 262156, 131074, 0, 327692, 131074, 1, 393228, 131074, 1, 458764, 131074, 2, 524300, 1, 0, 589836, 1, 0, 655372, 1, 0, 720908, 1, 0, 13, 1, 0, 65549, 1, 0, 131085, 1, 0, 196621, 1, 0, 262157, 131074, 0, 327693, 131074, 1, 393229, 131074, 1, 458765, 327682, 0, 524301, 65538, 2, 589837, 1, 0, 655373, 1, 0, 720909, 1, 0, 14, 1, 0, 65550, 1, 0, 131086, 1, 0, 196622, 1, 0, 262158, 196610, 0, 327694, 196610, 1, 393230, 262146, 1, 458766, 131074, 1, 524302, 327682, 0, 589838, 65538, 2, 655374, 1, 0, 720910, 1, 0, 15, 1, 0, 65551, 1, 0, 131087, 1, 0, 196623, 1, 0, 262159, 1, 0, 327695, 1, 0, 393231, 196610, 0, 458767, 262146, 1, 524303, 131074, 1, 589839, 327682, 0, 655375, 65538, 2, 720911, 1, 0, 16, 1, 0, 65552, 1, 0, 131088, 1, 0, 196624, 1, 0, 262160, 1, 0, 327696, 1, 0, 393232, 1, 0, 458768, 131074, 0, 524304, 131074, 1, 589840, 131074, 1, 655376, 131074, 2, 720912, 1, 0, 17, 1, 0, 65553, 1, 0, 131089, 1, 0, 196625, 1, 0, 262161, 1, 0, 327697, 1, 0, 393233, 1, 0, 458769, 131074, 0, 524305, 131074, 1, 589841, 131074, 1, 655377, 131074, 2, 720913, 1, 0, 18, 1, 0, 65554, 1, 0, 131090, 1, 0, 196626, 1, 0, 262162, 1, 0, 327698, 1, 0, 393234, 1, 0, 458770, 131074, 0, 524306, 131074, 1, 589842, 131074, 1, 655378, 131074, 2, 720914, 1, 0, 19, 1, 0, 65555, 1, 0, 131091, 1, 0, 196627, 1, 0, 262163, 1, 0, 327699, 1, 0, 393235, 1, 0, 458771, 131074, 0, 524307, 131074, 1, 589843, 262146, 0, 655379, 196610, 2, 720915, 1, 0, 20, 1, 0, 65556, 1, 0, 131092, 1, 0, 196628, 1, 0, 262164, 1, 0, 327700, 1, 0, 393236, 65538, 0, 458772, 327682, 1, 524308, 262146, 0, 589844, 196610, 2, 655380, 1, 0, 720916, 1, 0, 21, 1, 0, 65557, 1, 0, 131093, 1, 0, 196629, 1, 0, 262165, 1, 0, 327701, 1, 0, 393237, 131074, 0, 458773, 131074, 1, 524309, 131074, 2, 589845, 1, 0, 655381, 1, 0, 720917, 1, 0, 22, 1, 0, 65558, 1, 0, 131094, 1, 0, 196630, 1, 0, 262166, 1, 0, 327702, 1, 0, 393238, 131074, 0, 458774, 131074, 1, 524310, 131074, 2, 589846, 1, 0, 655382, 1, 0, 720918, 1, 0, 23, 1, 0, 65559, 1, 0, 131095, 1, 0, 196631, 1, 0, 262167, 1, 0, 327703, 65538, 0, 393239, 327682, 1, 458775, 262146, 0, 524311, 196610, 2, 589847, 1, 0, 655383, 1, 0, 720919, 1, 0, 24, 1, 0, 65560, 1, 0, 131096, 1, 0, 196632, 1, 0, 262168, 1, 0, 327704, 131074, 0, 393240, 131074, 1, 458776, 131074, 2, 524312, 1, 0, 589848, 1, 0, 655384, 1, 0, 720920, 1, 0, 25, 1, 0, 65561, 1, 0, 131097, 1, 0, 196633, 1, 0, 262169, 1, 0, 327705, 131074, 0, 393241, 131074, 1, 458777, 131074, 2, 524313, 1, 0, 589849, 1, 0, 655385, 1, 0, 720921, 1, 0)
layer_1/name = "cliff"
layer_1/tile_data = PackedInt32Array(16, 65538, 5, 65552, 65538, 6, 17, 131074, 5, 65553, 131074, 6, 18, 131074, 5, 65554, 327682, 4, 131090, 65538, 6, 19, 131074, 5, 65555, 131074, 5, 131091, 131074, 6, 20, 131074, 5, 65556, 131074, 5, 131092, 131074, 6, 21, 131074, 5, 65557, 131074, 5, 131093, 131074, 6, 22, 131074, 5, 65558, 131074, 5, 131094, 131074, 6, 23, 131074, 5, 65559, 131074, 5, 131095, 131074, 6, 24, 131074, 5, 65560, 131074, 5, 131096, 131074, 6, 25, 131074, 5, 65561, 131074, 5, 131097, 131074, 6)
layer_2/name = "ysort"
layer_2/y_sort_enabled = true
layer_2/tile_data = PackedInt32Array(589825, 3, 5, 2, 655363, 7, 720900, 3, 1, 131077, 524291, 6, 589829, 524291, 6, 6, 524291, 6, 262150, 655363, 7, 196616, 3, 1, 655368, 655363, 7, 9, 3, 5, 655371, 327683, 0, 131084, 327683, 0, 589836, 393219, 7, 196621, 3, 0, 65550, 524291, 6, 655376, 524291, 6, 262161, 3, 5, 19, 393219, 7, 262163, 655363, 7, 720915, 3, 1, 655381, 393219, 7, 131094, 524291, 6, 65559, 3, 1, 524311, 524291, 6, 24, 655363, 7, 196633, 3, 1)

[node name="player" parent="." instance=ExtResource("4_31fbh")]
position = Vector2(6, 39)

[node name="enemy" parent="." instance=ExtResource("5_kawjt")]
position = Vector2(287, 137)

[node name="collisions" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="collisions"]
polygon = PackedVector2Array(0, 1, 178, 0, 178, -33, 259, -33, 260, 28, 291, 28, 291, 44, 417, 43, 417, 79, 442, 78, 443, 128, 416, 129, 417, 191, 0, 192, 0, 5, -5, 5, -5, 197, 423, 197, 423, 135, 447, 134, 447, 72, 423, 73, 422, 37, 298, 39, 297, 23, 266, 23, 265, -42, 169, -42, 169, -5, 0, -5)

[node name="cliffside_transition_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="cliffside_transition_point"]
position = Vector2(219, -16.5)
shape = SubResource("RectangleShape2D_fo2mx")

[node name="plains_transition_point" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="plains_transition_point"]
position = Vector2(429, 103.5)
shape = SubResource("RectangleShape2D_gr3n8")

[connection signal="body_entered" from="cliffside_transition_point" to="." method="_on_cliffside_transition_point_body_entered"]
[connection signal="body_exited" from="cliffside_transition_point" to="." method="_on_cliffside_transition_point_body_exited"]
[connection signal="body_entered" from="plains_transition_point" to="." method="_on_plains_transition_point_body_entered"]
[connection signal="body_exited" from="plains_transition_point" to="." method="_on_plains_transition_point_body_exited"]
